@@ -1,8 +1,6 @@
 package com.uade.tp.services;
 
 import com.uade.tp.dtos.ConnectionDTO;
-import com.uade.tp.dtos.NeighborDTO;
-import com.uade.tp.dtos.StationDTO;
 import com.uade.tp.repositories.StationRepository;
 import org.springframework.stereotype.Service;
 
@@ -188,7 +186,7 @@ public class PathService {
         }
 
         visited.remove(current);
-        currentPath.remove(currentPath.size() - 1);
+        currentPath.removeLast();
     }
 
 }
